--- a/src/main/resources/templates/productoDetalles.html
+++ b/src/main/resources/templates/productoDetalles.html
@@ -20,6 +20,8 @@
     <!-- General Styles -->
     <link rel="stylesheet" th:href="@{/css/style.css}">
 
+    <link rel="stylesheet" th:href="@{/css/cuenta.css}">
+
 </head>
 <style type="text/css">
     table, th, td{
@@ -84,74 +86,122 @@
 <div class="container container-web-page">
     <h3 class="font-weight-bold poppins-regular text-uppercase">Detalles del producto</h3>
     <hr>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 col-lg-5">
-                <!--cover-->
-                <figure class="full-box">
-                    <img class="img-fluid" th:src="@{/assets/img/logo1.png}" alt="restaurante">
-                </figure>
 
-            </div>
-            <div class="col-12 col-lg-7">
+    <div class="container">
+        <div class="card">
 
+            <div class="additional" id="additional">
+                <div class="user-card">
 
-                <!-- Modificar cuenta -->
-                <form class="div-bordered" action="" style="padding: 15px;" >
-                    <fieldset id="campo" disabled="true">
-                        <div class="form-input mb-4">
+                    <div th:if="${param.success}">
+                        <dialog id="ms" open>
+                            <p>Has actualizado el producto correctamente</p>
+                            <button class="btn btn-raised btn-primary btn-sm w-100" id="close" onclick="document.getElementById('ms').close()">Ok!</button>
+                        </dialog>
+                    </div>
 
-                            <span class="text-info lead font-weight-bold">Nombre del producto:</span>
+                    <div class="col-12 col-lg-5">
+                        <!--cover-->
+                        <figure class="full-box">
+                            <img class="perfilimg center img-fluid" th:src="@{/assets/img/logo1.png}" alt="Usuario">
+                        </figure>
+
+                    </div>
+                </div>
+                <div class="more-info">
+
+                    <!-- Funcionalidad de actualizacion de datos de usuario -->
+                    <h1>Actualización de producto</h1>
+                    <form th:action="@{'/productoDetalles.html/' + ${usuario.adminId} + '/' + ${restaurante.idrest} + '/' +${producto.productId}}" th:object="${producto}" method="POST" >
+                        <div class="form-group mb-4" >
+
+                            <label for="name" class="text-light lead font-weight-bold">Nombre del producto:</label>
                             <input type="text"  value="" class="form-control text-center"
-                                   id="InNameProduct" th:placeholder="${producto.name}" required="" pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="producto" >
+                                   th:field="*{name}" id="name" th:placeholder="${producto.name}" required pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="Nombre producto" >
+
                         </div>
 
-                        <div class="form-input mb-4">
+                        <div class="form-group mb-4">
 
-                            <span class="text-info lead font-weight-bold">Descripcion del producto:</span>
+                            <label for="description" class="text-light lead font-weight-bold">Descripcion del producto:</label>
 
                             <input type="text" value="" class="form-control text-center"
-                                   id="DescProduct" th:placeholder="${producto.description}" required="" pattern="[a-zA-z0-9áéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="Descripcion" >
+                                   th:field="*{description}" id="description" th:placeholder="${producto.description}" required  maxlength="200" data-toggle="tooltip" data-placement="top" title="Descripcion producto" >
 
                         </div>
 
+                        <div class="form-group mb-4">
 
-                        <div class="form-input mb-4">
-
-                            <span class="text-info lead font-weight-bold">Precio:</span>
+                            <label for="price" class="text-light lead font-weight-bold">Precio:</label>
 
                             <input type="text" value="" class="form-control text-center"
-                                   id="Precio" th:placeholder="${producto.price}" required="" pattern="[0-9]{1,10}" maxlength="10" title="Se permiten solo valores numericos" >
+                                   th:field="*{price}" id="price" th:placeholder="${producto.price}" required pattern="{1,9}" maxlength="50" data-toggle="tooltip" data-placement="top" title="Precio del producto" >
 
                         </div>
 
-                        <div class="form-input mb-4">
+                        <div class="form-group mb-4">
 
-                            <span class="text-info lead font-weight-bold">Stock:</span>
+                            <label for="stock" class="text-light lead font-weight-bold">Stock:</label>
 
                             <input type="text" value="" class="form-control text-center"
-                                   id="Stock" th:placeholder="${producto.stock}" required="" pattern="[0-9]{1,10}" maxlength="10" title="Se permiten solo valores numericos" >
+                                   th:field="*{stock}" id="stock" th:placeholder="${producto.stock}" required pattern="{1,9}" maxlength="50" data-toggle="tooltip" data-placement="top" title="Stock del producto" >
 
                         </div>
 
-                    </fieldset>
+                        <input type="hidden" th:field="*{productId}">
 
                         <div class="row">
+                            <div class="col-6 col-md-6 text" >
 
-                            <div class="col-12 col-md-6 text">
-                                <button type="submit" id="actualizar"
-                                        onclick="document.getElementById('campo').disabled = false" class="btn btn-info btn-sm"><i class="fas fa-sync fa-fw" title="Actualice datos del producto"></i> &nbsp; Actualizar</button>
+                                <button type="submit" id="confirmar_actualizar" class="btn btn-info btn-sm btn-success" >confirmar actualizacion</button>
                             </div>
-                            <div class="col-12 col-md-6 text">
-                                <button href="#"class="btn btn-raised btn-primary btn-sm w-100" title="eliminar producto"><i class="fas fa-times fa-fw"></i> &nbsp; Eliminar producto</button>
 
+                            <div class="col-6 col-md-6 text" >
+
+                                <input type="button" id="volver"
+                                       onclick="document.getElementById('additional').style.width='40%';" class="btn btn-danger btn-sm" value="volver"></input>
                             </div>
                         </div>
-                </form>
+                    </form>
 
+
+
+                </div>
+            </div>
+
+            <!--Datos de perfil del usuario-->
+            <div class="general">
+                <h1>Datos del producto</h1>
+
+                <span class="text-dark lead font-weight-bold">Nombre del producto:</span>
+                <p class="dato" th:text="${producto.name}"></p>
+
+                <span class="text-dark lead font-weight-bold">Descripcion del producto:</span>
+                <p class="dato" th:text="${producto.description}"></p>
+
+                <span class="text-dark lead font-weight-bold">Precio:</span>
+                <p class="dato" th:text="'$' + ${producto.price}"></p>
+
+                <span class="text-dark lead font-weight-bold">Stock:</span>
+                <p class="dato" th:text="${producto.stock}"></p>
+
+                <div class="row">
+                    <div class="col-6 col-md-6 text" >
+
+                        <button onclick="document.getElementById('additional').style.width='100%'" id="actualizar" class="btn btn-info btn-sm"><i class="fas fa-sync fa-fw" title="Ver actualizacion de producto"></i> &nbsp; Actualizar</button>
+                    </div>
+                    <div class="col-6 col-md-6 text">
+                        <button href="#"class="btn btn-raised btn-danger btn-sm w-100" title="eliminar local"><i class="fas fa-times fa-fw"></i> &nbsp; Eliminar producto</button>
+                    </div>
+                </div>
             </div>
         </div>
+
     </div>
+
+
+
+
 </div>
 
 
