--- a/src/main/resources/templates/restauranteAgregarBuscador.html
+++ b/src/main/resources/templates/restauranteAgregarBuscador.html
@@ -20,22 +20,27 @@
     <!-- General Styles -->
     <link rel="stylesheet" th:href="@{/css/style.css}">
 
+    <link rel="stylesheet" th:href="@{/css/agregar.css}">
+
 </head>
 <body>
 
 <!-- Header -->
-<header class="header full-box">
+<header class="header full-box navbar navbar-dark bg-dark">
+    <a class="navbar-brand">
+        <div id="menu-bar" class="fas fa-hamburger fa-2x text-white"></div>
+    </a>
     <div class="header-options full-box">
         <nav class="header-navbar full-box poppins-regular font-weight-bold" >
             <ul class="list-unstyled full-box">
                 <li>
-                    <a th:href="@{'/restaurantesBuscador.html/' + ${usuario.adminId}}" >Mis restaurantes<span class="full-box" ></span></a>
+                    <a th:href="@{'/restaurantesBuscador.html/' + ${usuario.adminId}}"  class="text-light">Mis restaurantes<span class="full-box" ></span></a>
                 </li>
 
             </ul>
         </nav>
         <div class="header-button full-box text-center btn-login-menu" >
-            <i class="fas fa-user-alt" onclick="show_popup_login()" data-mdb-toggle="tooltip" data-mdb-placement="bottom" title="Mi cuenta" ></i>
+            <i class="fas fa-user-alt text-light" onclick="show_popup_login()" data-mdb-toggle="tooltip" data-mdb-placement="bottom" title="Mi cuenta" ></i>
             <div class="div-bordered popup-login">
 
 
@@ -43,7 +48,7 @@
                 <div class="text-center full-box">
                     <i class="fas fa-user-circle fa-4x"></i>
                 </div>
-                <span class="poppins-regular font-weight-bold">Nombre de usuario</span>
+                <span class="poppins-regular font-weight-bold" th:text="${usuario.adminname}"></span>
                 <div class="text-center full-box">
                     <a th:href="@{'/cuentaBuscador.html/' + ${usuario.adminId}}" class="btn btn-info btn-sm w-100"><i class="fas fa-user-cog fa-fw"></i> &nbsp; Mi cuenta</a>
                 </div>
@@ -65,47 +70,56 @@
     <p class="text-justify">La información introducida en el formulario debe de ser clara, precisa y legitima. Para crear un nuevo restaurante debe de llenar todos los campos que son obligatorios marcados con el icono <i class="fab fa-font-awesome-alt"></i></p>
     <hr>
 
-    <div class="row">
-        <div class="col-12 col-lg-5">
-            <!--cover-->
-            <figure class="full-box">
-                <img class="img-fluid" th:src="@{/assets/img/logo.jpg}" alt="restaurante">
-            </figure>
+    <div class="container">
+        <div class="card">
 
-        </div>
-        <div class="col-12 col-lg-7">
+            <div class="additional" id="additional">
+                <div class="user-card">
 
-            <form class="div-bordered" action="" style="padding: 15px; "  >
+                    <div class="col-12 col-lg-5">
+                        <!--cover-->
+                        <figure class="full-box">
+                            <img class="perfilimg center img-fluid" th:src="@{/assets/img/logo.jpg}" alt="Usuario">
+                        </figure>
 
-                <fieldset>
-
-                    <legend><i class="far fa-address-card"></i> &nbsp; Nombre de restaurante</legend>
-                    <div class="form-outline mb-4">
-                        <input type="text" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ@ ]{4,35}" class="form-control text-center" id="nombreRes" maxlength="50" data-toggle="tooltip" data-placement="top">
-                        <label for="nombreRes" class="form-label">Nombre de restaurante <i class="fab fa-font-awesome-alt"></i></label>
                     </div>
+                </div>
+            </div>
 
-                    <legend><i class="far fa-address-card"></i> &nbsp; Slogan Restaurante</legend>
-                    <div class="form-outline mb-4">
-                        <input type="text" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ@ ]{4,35}" class="form-control" id="sloganRes" maxlength="50" data-toggle="tooltip" data-placement="top">
-                        <label for="sloganRes" class="form-label">Slogan<i class="fab fa-font-awesome-alt"></i></label>
-                    </div>
+            <!--Datos de perfil del usuario-->
+            <div class="general">
+                <form>
 
-                    <legend><i class="far fa-address-card"></i> &nbsp; Numero de mesas</legend>
-                    <div class="form-outline mb-4">
-                        <input type="text" required="" pattern="[0-9]{1,10}" title="se permiten solo valores numericos" maxlength="10" class="form-control" id="mesasRes">
-                        <label for="mesasRes" class="form-label">cantidad de mesas <i class="fab fa-font-awesome-alt"></i></label>
-                    </div>
+                    <fieldset>
 
-                </fieldset>
+                        <legend class="titulo text-light"><i class="far fa-address-card text-light"></i> &nbsp; Nombre de restaurante</legend>
+                        <div class="form-outline mb-4">
+                            <input type="text" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ@ ]{4,35}" class="form-control text-center text-light" id="nombreRes" maxlength="50" data-toggle="tooltip" data-placement="top">
+                            <label for="nombreRes" class="form-label text-light">Nombre <i class="fab fa-font-awesome-alt"></i></label>
+                        </div>
 
-                <p class="text-center" style="margin-top: 40px;">
-                    <input type="submit" class="btn btn-info btn-sm" value="AGREGAR RESTAURANTE" ></input>
-                </p>
-                <p class="text-center">
-                    <small>Los campos marcados con <i class="fab fa-font-awesome-alt"></i> son obligatorios</small>
-                </p>
-            </form>
+                        <legend class="text-light"><i class="far fa-address-card text-light"></i> &nbsp; Slogan Restaurante</legend>
+                        <div class="form-outline mb-4">
+                            <input type="text" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ@ ]{4,35}" class="form-control text-center text-light" id="sloganRes" maxlength="50" data-toggle="tooltip" data-placement="top">
+                            <label for="sloganRes" class="form-label text-light">Slogan<i class="fab fa-font-awesome-alt"></i></label>
+                        </div>
+
+                        <legend class="text-light"><i class="far fa-address-card text-light"></i> &nbsp; Numero de mesas</legend>
+                        <div class="form-outline mb-4">
+                            <input type="text" required="" pattern="[0-9]{1,10}" title="se permiten solo valores numericos" maxlength="10" class="form-control text-center text-light" id="mesasRes">
+                            <label for="mesasRes" class="form-label text-light">total de mesas <i class="fab fa-font-awesome-alt"></i></label>
+                        </div>
+
+                    </fieldset>
+
+                    <p class="text-center" style="margin-top: 40px;">
+                        <input type="submit" class="btn btn-info btn-sm" value="AGREGAR RESTAURANTE" ></input>
+                    </p>
+                    <p class="text-center">
+                        <small class="text-light">Los campos marcados con <i class="fab fa-font-awesome-alt text-light"></i> son obligatorios</small>
+                    </p>
+                </form>
+            </div>
         </div>
     </div>
 </div>
