--- a/src/main/resources/templates/productos.html
+++ b/src/main/resources/templates/productos.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 
     <link rel="stylesheet" th:href="@{/css/productos.css}">
+
     <style type="text/css">
         .container-fluid {
             border-top: 1px solid #E1E1E1;
@@ -32,30 +33,33 @@
 <body>
 
 <!-- Header -->
-<header class="header full-box">
+<header class="header full-box navbar navbar-dark bg-dark">
+    <a class="navbar-brand">
+        <div id="menu-bar" class="fas fa-hamburger fa-2x text-white"></div>
+    </a>
     <div class="header-options full-box">
-        <nav class="header-navbar full-box poppins-regular font-weight-bold"  >
+        <nav class="header-navbar full-box poppins-regular font-weight-bold" >
             <ul class="list-unstyled full-box">
                 <li>
-                    <a th:href="@{'/productos.html/' + ${usuario.adminId} + '/' + ${restaurante.idrest}}" >Productos<span class="full-box" ></span></a>
+                    <a href="#" class="text-light">Productos<span class="full-box" ></span></a>
                 </li>
                 <li>
-                    <a th:href="@{'/pedidos.html/' + ${usuario.adminId} + '/' + ${restaurante.idrest}}" >Pedidos<span class="full-box" ></span></a>
+                    <a th:href="@{'/pedidos.html/' + ${usuario.adminId} + '/' + ${restaurante.idrest}}" class="text-light">Pedidos<span class="full-box" ></span></a>
                 </li>
                 <li>
-                    <a th:href="@{'/estadisticas.html/' + ${usuario.adminId} + '/' + ${restaurante.idrest}}" >Estadisticas<span class="full-box" ></span></a>
+                    <a th:href="@{'/estadisticas.html/' + ${usuario.adminId} + '/' + ${restaurante.idrest}}" class="text-light">Estadisticas<span class="full-box" ></span></a>
                 </li>
                 <li>
-                    <a th:href="@{'/localDatos.html/' + ${usuario.adminId} + '/' + ${restaurante.idrest}}" >Datos del local<span class="full-box" ></span></a>
+                    <a th:href="@{'/localDatos.html/' + ${usuario.adminId} + '/' + ${restaurante.idrest}}" class="text-light">Datos del local<span class="full-box" ></span></a>
                 </li>
                 <li>
-                    <a th:href="@{'/restaurantesBuscador.html/' + ${usuario.adminId}}" >Regresar a restaurantes<span class="full-box" ></span></a>
+                    <a th:href="@{'/restaurantesBuscador.html/' + ${usuario.adminId}}" class="text-light">Regresar a restaurantes<span class="full-box" ></span></a>
                 </li>
 
             </ul>
         </nav>
         <div class="header-button full-box text-center btn-login-menu" >
-            <i class="fas fa-user-alt" onclick="show_popup_login()" data-mdb-toggle="tooltip" data-mdb-placement="bottom" title="Mi cuenta" ></i>
+            <i class="fas fa-user-alt text-light" onclick="show_popup_login()" data-mdb-toggle="tooltip" data-mdb-placement="bottom" title="Mi cuenta" ></i>
             <div class="div-bordered popup-login">
 
 
@@ -87,17 +91,8 @@
     <!-- boton para agregar nuevo restaurante-->
     <div class="container-fluid" style="padding: 20px 0;">
         <div class="row">
-            <div class="col-12 col-sm-4 text-capitalize">
-                <button type="button" class="btn btn-info" data-mdb-toggle="modal"
-                        data-mdb-target="#saucerModal">
-                    <i class="fas fa-search fa-fw"></i> &nbsp; Buscar
-                </button>
-            </div>
-            <div class="col-12 col-md-4 text-capitalize">
-                <a th:href="@{'/productoAgregar.html/' + ${usuario.adminId} + '/' + ${restaurante.idrest}}" class="btn btn-success btn-sm"><i class="fas fa-database fa-fw"> </i> &nbsp; Agregar producto</a>
-
-            </div>
-
+            <div class="col-12 text-capitalize text-center">
+                <a th:href="@{'/productoAgregar.html/' + ${usuario.adminId} + '/' + ${restaurante.idrest}}" class="btn btn-success btn-sm"><i class="fas fa-database fa-fw"> </i> &nbsp; Agregar producto</a>            </div>
         </div>
     </div>
 
@@ -132,41 +127,6 @@
 
 
 </div>
-<!-- En esta parte va la busqueda del restaurante-->
-<!-- Modal -->
-<div class="modal fade" id="saucerModal" tabindex="-1" aria-hidden="true" aria-labelledby="saucerModalLabel" >
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="saucerModalLabel">Buscar producto</h5>
-                <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="form-outline mb-4">
-                    <input type="text" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ ]{4,25}" class="form-control" name="buscar_platillo" id="buscar_platillo" maxlength="25">
-                    <label for="buscar_platillo" class="form-label">¿Qué estás buscando?</label>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-mdb-dismiss="modal"><i class="fas fa-times fa-fw"></i> &nbsp; Cerrar</button>
-                <button type="button" class="btn btn-info"><i class="fas fa-search fa-fw"></i> &nbsp; Buscar</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<!-- En esta parte se le puede agregar una imagen, o dejarla como está-->
-<footer class="footer">
-    <div class="container">
-        <div class="row">
-
-            <div class="col-12 col-md-4">
-
-            </div>
-        </div>
-    </div>
-</footer>
 
 
 <!-- MDBootstrap V5 -->
