--- a/src/main/resources/templates/cuenta.html
+++ b/src/main/resources/templates/cuenta.html
@@ -64,7 +64,7 @@
                 </div>
 
                 <form class="full-box" action="">
-                    <a th:href="@{/login.html}" class="btn btn-raised btn-primary btn-sm w-100" ><i class="fas fa-door-open fa-fw"></i> &nbsp; Cerrar sesión</a>
+                    <a th:href="@{/logout}" class="btn btn-raised btn-primary btn-sm w-100" ><i class="fas fa-door-open fa-fw"></i> &nbsp; Cerrar sesión</a>
                 </form>
 
             </div>
