--- a/src/main/resources/templates/productoAgregar.html
+++ b/src/main/resources/templates/productoAgregar.html
@@ -20,6 +20,8 @@
     <!-- General Styles -->
     <link rel="stylesheet" th:href="@{/css/style.css}">
 
+    <link rel="stylesheet" th:href="@{/css/agregar.css}">
+
 </head>
 <body>
 
@@ -77,55 +79,73 @@
     <p class="text-justify">La información introducida en el formulario debe de ser clara, precisa y legitima. Para crear un nuevo producto debe de llenar todos los campos que son obligatorios marcados con el icono <i class="fab fa-font-awesome-alt"></i></p>
     <hr>
 
-    <div class="row">
-        <div class="col-12 col-lg-5">
-            <!--cover-->
-            <figure class="full-box">
-                <img class="img-fluid" th:src="@{/assets/img/logo.jpg}" alt="restaurante">
-            </figure>
+    <div class="container">
+        <div class="card">
 
-        </div>
-        <div class="col-12 col-lg-7">
+            <div class="additional" id="additional">
+                <div class="user-card">
 
-            <form class="div-bordered" action="" style="padding: 15px; "  >
-
-                <fieldset>
-
-                    <legend><i class="far fa-address-card"></i> &nbsp; Nombre del producto</legend>
-                    <div class="form-outline mb-4">
-                        <input type="text" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ@ ]{4,35}" class="form-control text-center" id="nombrePro" maxlength="50" data-toggle="tooltip" data-placement="top">
-                        <label for="nombrePro" class="form-label">Nombre <i class="fab fa-font-awesome-alt"></i></label>
+                    <div th:if="${param.success}">
+                        <dialog id="ms" open>
+                            <p>Has creado un producto correctamente</p>
+                            <button class="btn btn-raised btn-primary btn-sm w-100" id="close" onclick="document.getElementById('ms').close()">Ok!</button>
+                        </dialog>
                     </div>
 
-                    <legend><i class="far fa-address-card"></i> &nbsp; Descripcion del producto</legend>
-                    <div class="form-outline mb-4">
-                        <input type="text" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ@ ]{4,35}" class="form-control" id="descripcionPro" maxlength="50" data-toggle="tooltip" data-placement="top">
-                        <label for="descripcionPro" class="form-label">Descripcion<i class="fab fa-font-awesome-alt"></i></label>
+                    <div class="col-12 col-lg-5">
+                        <!--cover-->
+                        <figure class="full-box">
+                            <img class="perfilimg center img-fluid" th:src="@{/assets/img/logo.jpg}" alt="Usuario">
+                        </figure>
+
                     </div>
+                </div>
+            </div>
 
-                    <legend><i class="far fa-address-card"></i> &nbsp; Precio del producto</legend>
-                    <div class="form-outline mb-4">
-                        <input type="text" required="" pattern="[0-9]{1,10}" title="se permiten solo valores numericos" maxlength="10" class="form-control" id="precioPro">
-                        <label for="precioPro" class="form-label">Precio <i class="fab fa-font-awesome-alt"></i></label>
-                    </div>
+            <!--Datos de perfil del usuario-->
+            <div class="general">
+                <form th:action="@{'/productoAgregar.html/' + ${usuario.adminId} + '/' + ${restaurante.idrest}}" th:object="${producto}" method="POST">
 
-                    <legend><i class="far fa-address-card"></i> &nbsp; Total de stock del producto</legend>
-                    <div class="form-outline mb-4">
-                        <input type="text" required="" pattern="[0-9]{1,10}" title="se permiten solo valores numericos" maxlength="10" class="form-control" id="stockPro">
-                        <label for="stockPro" class="form-label">Stock <i class="fab fa-font-awesome-alt"></i></label>
-                    </div>
+                    <fieldset>
 
-                </fieldset>
+                        <legend><i class="titulo far fa-address-card text-light"></i> &nbsp; Nombre del producto</legend>
+                        <div class="form-outline mb-4">
+                            <input th:field="*{name}" type="text" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ@ ]{4,35}" class="form-control text-center text-light" id="nombrePro" maxlength="50" data-toggle="tooltip" data-placement="top">
+                            <label for="nombrePro" class="form-label text-light">Nombre <i class="fab fa-font-awesome-alt"></i></label>
+                        </div>
 
-                <p class="text-center" style="margin-top: 40px;">
-                    <input type="submit" class="btn btn-info btn-sm" value="AGREGAR PRODUCTO" ></input>
-                </p>
-                <p class="text-center">
-                    <small>Los campos marcados con <i class="fab fa-font-awesome-alt"></i> son obligatorios</small>
-                </p>
-            </form>
+                        <legend><i class="far fa-address-card text-light"></i> &nbsp; Descripcion del producto</legend>
+                        <div class="form-outline mb-4">
+                            <input th:field="*{description}" type="text" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ@ ]{4,35}" class="form-control text-light" id="descripcionPro" maxlength="50" data-toggle="tooltip" data-placement="top">
+                            <label for="descripcionPro" class="form-label text-light">Descripcion<i class="fab fa-font-awesome-alt"></i></label>
+                        </div>
+
+                        <legend><i class="far fa-address-card text-light"></i> &nbsp; Precio del producto</legend>
+                        <div class="form-outline mb-4">
+                            <input th:field="*{price}"  type="text" required="" pattern="[0-9]{1,10}" title="se permiten solo valores numericos" maxlength="10" class="form-control text-light" id="precioPro">
+                            <label for="precioPro" class="form-label text-light">Precio <i class="fab fa-font-awesome-alt"></i></label>
+                        </div>
+
+                        <legend><i class="far fa-address-card text-light"></i> &nbsp; Total de stock del producto</legend>
+                        <div class="form-outline mb-4">
+                            <input th:field="*{stock}" type="text" required="" pattern="[0-9]{1,10}" title="se permiten solo valores numericos" maxlength="10" class="form-control text-light" id="stockPro">
+                            <label for="stockPro" class="form-label text-light">Stock <i class="fab fa-font-awesome-alt"></i></label>
+                        </div>
+
+                    </fieldset>
+
+                    <p class="text-center" style="margin-top: 40px;">
+                        <button type="submit" class="btn btn-info btn-sm btn-success">AGREGAR PRODUCTO</button>
+                    </p>
+
+                    <p class="text-center">
+                        <small class="text-light">Los campos marcados con <i class="fab fa-font-awesome-alt"></i> son obligatorios</small>
+                    </p>
+                </form>
+            </div>
         </div>
     </div>
+
 </div>
 
 
