--- a/src/main/resources/templates/pedidos.html
+++ b/src/main/resources/templates/pedidos.html
@@ -103,8 +103,8 @@
                             <div class="type">Mesa</div>
                         </div>
                         <div class="stat border">
-                            <div class="value" th:text="'$' + ${pedido.paymentMethod}"></div>
-                            <div class="type">Costo total</div>
+                            <div class="value" th:text="${pedido.paymentMethod}"></div>
+                            <div class="type">Medio de pago</div>
                         </div>
                         <div class="stat details">
                             <i class="fas fa-hand-pointer fa-2x"></i>
@@ -143,7 +143,7 @@
 </div>
 
 
-<!-- En esta parte se le puede agregar una imagen, o dejarla como está-->
+<!-- En esta parte se le puede agregar una imagen, o dejarla como está
 <footer class="footer">
     <div class="container">
         <div class="row">
@@ -154,7 +154,7 @@
         </div>
     </div>
 </footer>
-
+-->
 
 <!-- MDBootstrap V5 -->
 <script th:src="@{/js/mdb.min.js}" ></script>
